--- a/index.html
+++ b/index.html
@@ -34,27 +34,27 @@
     <link href="style.css" rel="stylesheet" />
   </head>
   <body class="bg-light">
-    <div class="banner-wrap vh-100 vw-100 text-white">
-      <div class="overlay"></div>
-      <header class="px-5 p-3 text-white">
+    
+      <header class="px-5 p-3 text-white fixed-top scrolling">
         <div>
           <h3 class="float-md-start text-center">Portfolio</h3>
           <nav class="nav nav-masthead justify-content-center float-md-end">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="#">Features</a>
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="#about-us">About us</a>
+            <a class="nav-link" href="#projects">Projects</a>
+            <a class="nav-link" href="#contact">Contact</a>
           </nav>
         </div>
       </header>
-      <main
-        class="d-flex flex-column align-items-center justify-content-center h-75 text-center"
-      >
-        <h1 class="display-1">Kgotlello Leshike</h1>
-        <p class="lead">Industrial Engineer. Fullstack Developer. Enterpreneur.</p>
+      <div class="banner-wrap vh-100 vw-100 d-flex align-items-center justify-content-center text-white">
+      <div class="overlay"></div>
+      <main class="text-center">
+        <h1 class="display-1">Kgotlello M Leshike</h1>
+        <span class="lead" id="typed"></span>
       </main>
     </div>
 
-    <section>
+    <section id="about-us">
       <div class="container p-5">
         <div class="card">
           <div class="card-body">
@@ -70,7 +70,7 @@
                   </div>
                   <div class="col-md-7 mt-3">
                     <p><strong>Name:</strong> Kgotlello Leshike</p>
-                    <p><strong>Profile:</strong> Full Stack Developer</p>
+                    <p><strong>Profile:</strong> Full Stack Developer|Industsrial engineer</p>
                     <p><strong>Email:</strong> kmleshike@gmail.com</p>
                     <p><strong>Phone:</strong> +27 609021555</p>
                     <p>
@@ -107,7 +107,7 @@
       </div>
     </section>
 
-    <section>
+    <section id="projects">
       <div class="container p-5">
         <h1 class="text-center"><mark>Projects</mark></h1>
         <div class="row">
@@ -125,7 +125,8 @@
                   href="https://vc-netflix.netlify.app"
                   target="_blank"
                   class="btn btn-primary"
-                  >View Website</a>
+                  >View Website</a
+                >
                 <a
                   href="https://github.com/akhilboddu/vc-netflix"
                   target="_blank"
@@ -191,21 +192,21 @@
       </div>
     </section>
 
-    <section>
+    <section id="contact">
       <div class="container p-5">
         <div class="card p-3">
           <div class="card-body px-5 text-center">
             <h1><mark>Let's Connect</mark></h1>
             <p class="lead">
-              I would love to connect with fellow developers looking to collaborate, employers looking
-              for developers, or anyone looking for professional web development services.
+              I Would love to connect with fellow developers looking to collaborate, employers looking
+              for developers, or anyone needing professional web development services.
             </p>
-            <a
+            <!-- <a
               class="fs-2"
               href="https://www.instagram.com/akhilboddu/"
               target="_blank"
               ><i class="bi bi-instagram m-2"></i
-            ></a>
+            ></a> -->
             <a
               class="fs-2"
               href="https://www.linkedin.com/in/akhilboddu/"
@@ -220,8 +221,7 @@
             ></a>
 
             <form>
-
-              <div class="mb-3">              
+              <div class="mb-3">
                 <input
                   type="email"
                   class="form-control"
@@ -231,7 +231,7 @@
                 />
               </div>
 
-              <div class="mb-3">    
+              <div class="mb-3">
                 <input
                   type="text"
                   class="form-control"
@@ -240,7 +240,7 @@
                 />
               </div>
 
-              <div class="mb-3">    
+              <div class="mb-3">
                 <input
                   type="text"
                   class="form-control"
@@ -250,15 +250,44 @@
               </div>
 
               <div class="mb-3">
-                  <textarea class="form-control" aria-label="with textarea" placeholder="Enter Message"></textarea>
+                <textarea
+                  class="form-control"
+                  aria-label="with textarea"
+                  placeholder="Enter Message"
+                ></textarea>
               </div>
 
               <button type="submit" class="btn btn-primary">Submit</button>
             </form>
-
           </div>
         </div>
       </div>
     </section>
+
+    <footer class="bg-dark text-center text-white">
+        <div class="container p-3">
+            <p>Developed by Kgotlello Leshike</p>
+        </div>
+    </footer>
+
+    <script>
+        
+        window.addEventListener("scroll", () => {
+          const header = document.querySelector("header")
+          header.classList.toggle("scrolling", window.scrollY > 0)
+        })
+
+    </script>
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+
+    <script>
+        var typed = new Typed('#typed', {
+        strings: ['Fullstack Developer', 'Industrial Engineer.', 'Enterpreneur'],
+        loop: true,
+        typeSpeed: 75,
+        shuffle: true
+        });
+    </script>
+
   </body>
 </html>
